fix: adjust scrollbar for the right-sidebar

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -79,10 +79,9 @@ input.stay-days {
 }
 
 .right-column {
-  height: 100%;
-  max-height: 100vh;
-  overflow-y: scroll;
-  padding: 0 1rem;
+  overflow-y: hidden;
+  height: 100vh;
+  padding: 5rem 1rem 0;
   min-width: 14rem;
 }
 
